fixed password input style on small screens

--- a/app/templates/passwordInput/passwordInput.css
+++ b/app/templates/passwordInput/passwordInput.css
@@ -35,8 +35,7 @@
 }
 
 @media (max-device-width: 520px), (max-width: 520px) {
-  .passwordInput {
+  .passwordInput__form {
     flex-direction: column;
-    width: inherit;
   }
 }
